--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,12 @@
     "description": "Simple Blogs module",
     "type": "magento2-module",
     "version": "1.0.0",
-    "license": ["BSD-3-Clause"],
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
     "require": 
     {
         "php": ">7.0"
